--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "clip_stash"
+# path = "src/lib.rs"
+
 [dependencies]
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
