--- a/Cranky.toml
+++ b/Cranky.toml
@@ -4,4 +4,4 @@ deny = [
     # "clippy::expect_used"
 ]
 warn = ["clippy::pedantic", "clippy::nursery"]
-allow = ["clippy::missing_errors_doc"]
+allow = ["clippy::missing_errors_doc", "clippy::missing_const_for_fn"]
