--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,10 @@ chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1", features = ["serde", "v4"] }
 derive_more = "0.99"
 rand = "0.8"
+sqlx = { version = "0.6", features = [
+    "sqlite",
+    "runtime-tokio-rustls",
+    "macros",
+    "chrono",
+    "uuid",
+] }
